--- a/login.html
+++ b/login.html
@@ -1,43 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
- <head>
+<head>
     <meta name="viewport" content="width=device-width">"
-    <link href="css/estilo.css" rel="stylesheet">
-    <link rel="stylesheet" href="">
+    <link href="styles/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=">
-    <title>Puerta 18 - Login</title>
- </head>
-
- <body>
-   <header>
-      <div class="img-logo">
-         <img src="logo.svg" alt="">
-      </div>
-   </header>
-
-   <main>
-      <div class="contenedor">
-         <h1>Ingreso Socies</h1>
-
-         <div class="contenedor-form">
-            <h5>Nombre, apellido o apodo</h5>
-            <div class="caja">
-               
-            </div>
-         </div>
-
-         <div class="contenedor-botom">
-            <h4>Entrar</h4>
-         </div>
-
-         <div class="contenedor">
-            <h6>¿Todavía no sos parte? Sumáte</h6>
-         </div>
-
-      </div>
-   </main>
-   <footer></footer>
- </body>
-
+    <title>Ingreso | Puerta 18</title>
+</head>
+<body>
+    <div class="login-box">
+        <img class="logo" src="logo.svg" alt="logo de puerta">
+        <h1>INGRESO SOCIES</h1>
+        <form>
+            
+            <label for="nombre apellido o apodo">NOMBRE, APELLIDO O APODO:</label>
+            <input type="text" placeholder="Ingresá acá">
+           <h2>¿NO SOS SOCIE TODAVÍA?<a href="a"> SUMATE ACÁ</a></h2> 
+        </form>
+    </div>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+        </style>
+</body>
 </html>
